--- a/index.html
+++ b/index.html
@@ -13,15 +13,7 @@
     <title>Desafio Responsividade</title>
   </head>
   <body>
-    <header class="header-container">
-      <figure>
-        <img
-          src="/assets/images/Header Background.png"
-          alt="banner image"
-          class="banner-image"
-        />
-      </figure>
-
+    <header class="header-banner">
       <div class="header-content">
         <h1>Imagine um lugar...</h1>
         <p>
@@ -36,9 +28,7 @@
         <button>
           <a href="#">Baixar para Windows</a>
         </button>
-      </div>
 
-      <div>
         <button class="button-right">
           <a href="#">Abra o Discord no seu navegador</a>
         </button>
