--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,31 +8,143 @@
       name="description"
       content="A simple HTML document with a linked CSS stylesheet."
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Open+Sans:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="styles.css" />
-    <title>Desafio Responsividade</title>
+    <title>Discord Landing Page</title>
   </head>
   <body>
-    <header class="header-banner">
+    <section class="header-banner">
       <div class="header-content">
-        <h1>Imagine um lugar...</h1>
+        <h1>Imagine um <br />lugar...</h1>
+
+        <div class="header-p">
+          <p>
+            …onde você possa pertencer a um clube escolar, um grupo de gamers,
+            ou uma comunidade artística mundial. Onde você e alguns amigos
+            possam passar um tempo juntos. Um lugar que torna fácil conversar
+            todos os dias e socializar com mais frequência.
+          </p>
+        </div>
+
+        <div class="buttons">
+          <a href="#" class="btn-primary">Baixar para Windows</a>
+          <a href="#" class="btn-secondary">Abra o Discord no seu navegador</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Section 1 -->
+    <section class="img-section">
+      <div>
+        <figure>
+          <img
+            width="707"
+            height="494"
+            src="/assets/images/Section Image.png"
+            alt="imagem de seção"
+          />
+        </figure>
+      </div>
+
+      <div class="text-content">
+        <h2>
+          Crie um espaco controlado por convite onde você se sinta em casa
+        </h2>
         <p>
-          …onde você possa pertencer a um clube escolar, um grupo de gamers, ou
-          uma comunidade artística mundial. Onde você e alguns amigos possam
-          passar um tempo juntos. Um lugar que torna fácil conversar todos os
-          dias e socializar com mais frequência.
+          Os servidores Discord são organizados em canais com assuntos para
+          vocês colaborarem, compartilharem ou simplesmente falarem do dia sem
+          entupir um chat geral.
+        </p>
+      </div>
+    </section>
+
+    <!-- Section 2 -->
+    <section class="img-section2">
+      <div class="text-content">
+        <h2>Aqui é fácil se encontrar</h2>
+        <p>
+          Entre no canal de voz quando estiver à toa. Amigos no mesmo servidor
+          podem te ver e entrar imediatamente, sem nem ter que fazer a chamada.
         </p>
       </div>
 
-      <div class="buttons-left">
-        <button>
-          <a href="#">Baixar para Windows</a>
-        </button>
-
-        <button class="button-right">
-          <a href="#">Abra o Discord no seu navegador</a>
-        </button>
+      <div>
+        <figure>
+          <img
+            width="707"
+            height="480"
+            src="/assets/images/image1.png"
+            alt="imagem de seção"
+          />
+        </figure>
       </div>
-    </header>
+    </section>
+
+    <!-- Section 3 -->
+    <section class="img-section3">
+      <div>
+        <figure>
+          <img
+            width="707"
+            height="480"
+            src="/assets/images/image2.png"
+            alt="imagem de seção"
+          />
+        </figure>
+      </div>
+
+      <div class="text-content">
+        <h2>Para poucos e para muitos</h2>
+        <p>
+          Organize qualquer comunidade com ferramentas de moderação e acesso
+          personalizado a membros. Dê poderes especiais aos membros, monte
+          canais privados e muito mais.
+        </p>
+      </div>
+    </section>
+
+    <!-- Section 4 -->
+    <section class="img-section4">
+      <div class="text-content">
+        <h2>
+          TECNOLOGIA DE CONEXÃO <br />
+          CONFIÁVEL
+        </h2>
+        <p>
+          Voz e vídeo de baixa latência, para você conversar como se estivesse
+          na mesma sala. Dê um joinha por vídeo, veja amigos transmitirem a
+          jogatina do dia ou junte uma galera pra desenhar na tela
+          compartilhada.
+        </p>
+      </div>
+
+      <div>
+        <figure>
+          <img
+            width="984"
+            height="660"
+            src="/assets/images/image3.png"
+            alt="imagem de seção"
+          />
+        </figure>
+      </div>
+    </section>
+
+    <footer>
+      <div class="footer-content">
+        <figure>
+          <img
+            width="200"
+            height="50"
+            src="/assets/images/footer.png"
+            alt="logo do discord"
+          />
+        </figure>
+      </div>
+    </footer>
   </body>
 </html>
