finalizacao do projeto com responsividade

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta
       name="description"
-      content="A simple HTML document with a linked CSS stylesheet."
+      content="Página de apresentação do Discord com informações e recursos para novos usuários."
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Open+Sans:wght@300;400&display=swap"
@@ -109,7 +109,7 @@
 
     <!-- Section 4 -->
     <section class="img-section4">
-      <div class="text-content">
+      <div class="text-content4">
         <h2>
           TECNOLOGIA DE CONEXÃO <br />
           CONFIÁVEL
